# gstreamer-experiments

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  camcoder.toml
gstreamer-tutorials/: CMakeLists.txt
gstreamer-tutorials/basic01/: CMakeLists.txt  main.cpp
gstreamer-tutorials/basic02/: CMakeLists.txt  main.cpp
gstreamer-tutorials/basic03/: main.cpp
gstreamer-tutorials/basic04/: CMakeLists.txt  main.cpp
gstreamer-tutorials/basic06/: main.cpp
src/: CMakeLists.txt  config.cpp  config.hpp  file_frame_source.cpp  file_frame_source.hpp  frame.hpp  frame_parameters.hpp  frame_source.cpp  frame_source.hpp  main.cpp  pipeline.cpp  pipeline.hpp  tcp_client_frame_source.cpp  tcp_client_frame_source.hpp  tcp_server_frame_source.hpp  utils.hpp
test/generators/: frame_generation.py  tcp_client.py  tcp_server.py
